# sim-evtol

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
doc/: eVTOL Aircraft Manual Calculations.xlsx  eVTOL Simulation Prelim Design Drawings.pptx  sequence.uml
src/: main.cpp  sim_design.h  sim_evtol.cpp  sim_evtol.h  simulator_evtol.cpp  simulator_evtol.h
test/: test_suite.cpp
